# applypilot-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
extension/: manifest.json  options.css  options.html  options.js  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
scripts/: disable-autostart.ps1  doctor.ps1  enable-autostart.ps1  package-extension.ps1  render_sample_resume.py  setup.ps1  setup.sh  start-background.ps1  start.ps1  start.sh
src/applypilot/: __init__.py  adapters.py  ai.py  applications.py  config.py  doctor.py  documents.py  form_mapper.py  main.py  models.py  onboarding.py  resume.py  routing.py  security.py  store.py
src/applypilot/web/: app.js  index.html  styles.css  synthetic-ats.html
tests/: test_adapters.py  test_ai.py  test_api.py  test_applications.py  test_doctor.py  test_documents.py  test_form_mapper.py  test_onboarding.py  test_resume.py  test_routing.py  test_store.py
