[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "applypilot-agent"
version = "0.5.2"
description = "Local-first job application copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=45,<47",
  "fastapi>=0.115,<1",
  "google-genai>=1.0,<2",
  "httpx>=0.28,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.20,<1",
  "reportlab>=4.2,<5",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
applypilot = "applypilot.main:run"
applypilot-doctor = "applypilot.doctor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
applypilot = ["web/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
